fix body central align

--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,7 @@ body {
 }
 .body {
     padding: 2px;
+    width: 100%;
 }
 
 /*
